--- a/AI-Assistant.html
+++ b/AI-Assistant.html
@@ -137,7 +137,7 @@
       projectsError.classList.add('hidden');
       projectsContainer.innerHTML = '';
 
-      const PROJECTS_API_URL = 'https://corsproxy.io/?url=https://editor-compiler.onrender.com/api/projects';
+      const PROJECTS_API_URL = 'https://corsproxy.io/?url=https://sl-api-v1.onrender.com/api/projects';
 
       try {
         const response = await fetch(PROJECTS_API_URL);
