--- a/mystuff.html
+++ b/mystuff.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>User Profile - MyScratchBlocks - A Scratch & TurboWarp Modification</title>
+  <title>User Profile - SnapLabs - A Scratch & TurboWarp Modification</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -93,7 +93,7 @@
     if(userProfileName) {
       document.getElementById('iframe').src = `https://editor-compiler.onrender.com/users/${userProfileName}`;
     } else {
-      window.location.href = `https://myscratchblocks.github.io/404`; // or some default page
+      window.location.href = `404.html`; // or some default page
     }
   </script>
 </body>
