Rebranding to sl

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>404 Not Found - MyScratchBlocks - A Scratch & TurboWarp Modification</title>
+  <title>404 Not Found - SnapLabs - A Scratch & TurboWarp Modification</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -36,7 +36,7 @@
         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v-6h-2v6zm0-8h2V7h-2v2z"/>
         </svg>
-        <span>MyScratchBlocks</span>
+        <span>SnapLabs</span>
       </a>
       <nav class="hidden md:flex space-x-6">
         <a href="/" class="text-gray-600 hover:text-indigo-600 font-medium">Home</a>
@@ -62,16 +62,16 @@
 
   <section id="featured-projects" class="py-16 bg-gray-100">
     <div class="container mx-auto px-4">
-    This page was not found on the MyScratchBlocks site.
+    This page was not found on the SnapLabs site.
     
     <b>But here's what you could do!</b>
 
     Click one of the options from the below list:
     <ul>
-      <li>- <a href="https://myscratchblocks.github.io">Go To The Homepage Of This Website</a></li>
-      <li>- <a href="https://github.com/MyScratchBlocks/myscratchblocks.github.io/issues">Suggest this page or report a missing page by creating & opening an issue on our Github Repo</a></li>
+      <li>- <a href="/">Go To The Homepage Of This Website</a></li>
+      <li>- <a href="https://github.com/SnapLabsFoundation">Suggest this page or report a missing page by creating & opening an issue on our Github Org</a></li>
       <li>- <a href="javascript:history.go(-1)">Go back to the previous page you were on just before this 404 Not Found error page</a></li>
-      <li>- <a href="https://myscratchblocks.github.io/editor">Access the MyScratchBlocks Editor</a></li>
+      <li>- <a href="/editor/">Access the MyScratchBlocks Editor</a></li>
     </ul>
     </div>
   </section>
