--- a/v2/index.html
+++ b/v2/index.html
@@ -70,6 +70,6 @@
     </footer>
 
     <!-- React Scripts -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
