fix footer not disappearing during editor

--- a/v2/index.html
+++ b/v2/index.html
@@ -72,7 +72,7 @@
     <script>
       const footer = document.getElementById('snapfooter');
       if (window.location.href.includes('editor')) {
-        footer.style.display == 'none';
+        footer.style.display = 'none';
       } 
     </script>
     <!-- React Scripts -->
