--- a/v2/index.html
+++ b/v2/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Welcome To SnapLabs! The New Coding Platform Where You Can Create/Share and Collaborate with others while also having the ability to play online games! ">
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="scratch, projects, snaplabs, code" />
+    <meta property="og:title" content="SnapLabs" />
+    <meta property="og:description" content="Welcome To SnapLabs! The New and Enhanced Project Sharing Platform" />
+    <meta property="og:url" content="https://snaplabs.js.org/" />
+    <meta property="og:type" content="website" />  <!-- Don't edit -->  
     <title>SnapLabs - A Scratch & TurboWarp Modification</title>
 
     <!-- TailwindCSS CDN -->
